<!--
  ~     (C) Copyright 2019, ForgetSky.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<resources>
    <string name="app_name">WanAndroid</string>
    <!-- navigation -->
    <string name="my_collect">Collect</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">Night mode</string>
    <string name="nav_day_mode">Day mode</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="login_in">Login</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <!-- Search -->
    <string name="action_search">Search</string>
    <string name="history_search">Search History</string>
    <string name="hot_search">Top Search</string>
    <string name="useful_sites">Useful Sites</string>
    <string name="clear_all">Clear All</string>
    <string name="search_tint">search</string>
    <string name="search_null_tint">Search something</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="no_account">No account, Register</string>
    <string name="login_success">login success</string>
    <string name="login_fail">login fail</string>
    <string name="logout_fail">logout fail</string>
    <string name="enter_password_again">enter password again</string>
    <string name="have_account">Have account, Login</string>
    <string name="username_not_empty">User name cannot be empty</string>
    <string name="password_not_empty">Password cannot be empty</string>
    <string name="re_password_not_empty">Confirmation password cannot be empty</string>
    <string name="twice_password_not_same">The passwords entered twice are different</string>
    <string name="register_success">register success</string>
    <string name="register_fail">register fail</string>
    <string name="logging_in">Logging…</string>
    <string name="logging_out">Logout…</string>
    <string name="registering">Registering…</string>
    <string name="login_first">Please login first</string>

    <!-- home pager -->
    <string name="home_pager">Home pager</string>
    <string name="knowledge_hierarchy">Hierarchy</string>
    <string name="wx_article">WX article</string>
    <string name="navigation">Navigation</string>
    <string name="project">Project</string>
    <string name="failed_to_obtain_article_list">Failed gets the article list data</string>
    <string name="failed_to_obtain_banner_data">Failed to obtain advertising data</string>
    <string name="article_top">TOP</string>
    <string name="article_new">NEW</string>

    <!-- collect -->
    <string name="collect">Collect</string>
    <string name="cancel_collect">Cancel collect</string>
    <string name="failed_to_obtain_collect_list">Failure to get collections of articles</string>
    <string name="failed_to_cancel_collect">Failure to Cancel Collection</string>
    <string name="collect_success">Collect success</string>
    <string name="collect_failed">Collect failed</string>

    <!-- Common -->
    <string name="http_error">network anomaly</string>
    <string name="unKnown_error">unKnown error</string>
    <string name="double_click_exit_toast">Press the back button again to exit</string>
    <string name="loading">Loading</string>
    <string name="failed_to_get_navigation_data">Failed to get navigation data</string>
    <string name="failed_to_get_project_data">Failed to get project data</string>
    <string name="failed_to_get_knowledge_hierarchy_data">Failed to get knowledge hierarchy data</string>
    <string name="failed_to_get_wx_chapters_data">Failed to get wx chapters data</string>
    <string name="in_the_process">In the process of development, please look forward to it.</string>

    <!-- Setting detail -->
    <string name="cache_setting">Cache Setting</string>
    <string name="clear_cache">Clear Cache</string>

    <!-- Article detail -->
    <string name="share">Share</string>
    <string name="open_it_with_browser">Open it with the system browser</string>
    <string name="share_type_url" translatable="false">%1$sShare【%2$s】special top：%3$s</string>
    <string name="write_permission_not_allowed">Gets write permission failed</string>

    <!-- behavior -->
    <string name="scale_down_show_behavior" translatable="false">com.forgetsky.wanandroid.widget.behavior.ScaleDownShowBehavior</string>

    <!-- about -->
    <string name="about_upgrade">Upgrade</string>
    <string name="about_website">About website</string>
    <string name="about_source_code">Source code</string>
    <string name="about_copyright">Copyright</string>
    <string name="about_feedback">Feedback</string>

    <!-- todo -->
    <string name="todo_title">TODO</string>
    <string name="todo">Todo</string>
    <string name="done_todo">Done</string>
    <string name="todo_all">All</string>
    <string name="todo_work">Work</string>
    <string name="todo_study">Study</string>
    <string name="todo_life">Life</string>
    <string name="todo_other">Other</string>
    <string name="failed_to_obtain_todo_list">Failed gets the todo list data</string>
    <string name="tv_add_todo_title">Title:</string>
    <string name="tv_add_todo_content">Content:</string>
    <string name="tv_add_todo_label">Label:</string>
    <string name="tv_add_todo_priority">Priority:</string>
    <string name="tv_add_todo_date">Date:</string>
    <string name="hint_add_todo_not_null">not null</string>
    <string name="hint_add_todo_null_able">null able</string>
    <string name="todo_no_label">No Label</string>
    <string name="todo_priority_1">Important</string>
    <string name="todo_priority_2">General</string>
    <string name="todo_edit_title">Edit</string>
    <string name="todo_new_title">New</string>
    <string name="bt_todo_save">Save</string>
    <string name="bt_choose_label">Choose Label</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_todo_success">Add todo success</string>
    <string name="add_todo_failed">Add todo failed</string>
    <string name="update_todo_success">Update success</string>
    <string name="update_todo_failed">Update failed</string>
    <string name="update_todo_status_success">Completed</string>
    <string name="update_todo_status_failed">Update status failed</string>
    <string name="delete_todo_success">Delete success</string>
    <string name="delete_todo_failed">Delete failed</string>
    <string name="saving">saving…</string>
    <string name="marked_completed">Marked completed</string>
    <string name="marked_todo">Marked todo</string>
    <string name="delete_todo">Delete</string>
    <string name="confirm_delete_todo">Confirm delete</string>

    <string name="copyright_content">This APP is completely open source, only for learning and communication, not for any commercial use.</string>

</resources>
