<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     (C) Copyright 2019, ForgetSky.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item android:id="@+id/nav_item_my_collect"
            android:icon="@drawable/icon_like"
            android:title="@string/my_collect" />

        <item
            android:id="@+id/nav_item_todo"
            android:icon="@drawable/ic_todo_default"
            android:title="@string/nav_todo" />

        <item
            android:id="@+id/nav_item_night_mode"
            android:icon="@drawable/ic_night"
            android:title="@string/nav_night_mode" />

        <item android:id="@+id/nav_item_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />

        <item android:id="@+id/nav_item_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/logout" />

    </group>
</menu>