<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     (C) Copyright 2019, ForgetSky.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_main_pager"
        android:enabled="true"
        android:icon="@drawable/ic_home_pager"
        android:title="@string/home_pager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_knowledge_hierarchy"
        android:enabled="true"
        android:icon="@drawable/ic_knowledge_hierarchy"
        android:title="@string/knowledge_hierarchy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_navigation"
        android:title="@string/navigation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_wx_article"
        android:enabled="true"
        android:icon="@drawable/ic_wx_article"
        android:title="@string/wx_article"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_project"
        android:enabled="true"
        android:icon="@drawable/ic_project"
        android:title="@string/project"
        app:showAsAction="ifRoom" />
</menu>
