<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     (C) Copyright 2019, ForgetSky.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_collect"
        android:icon="@drawable/ic_like_not_white"
        android:orderInCategory="100"
        android:title="@string/collect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_system_browser"
        android:icon="@drawable/ic_action_browser"
        android:orderInCategory="100"
        android:title="@string/open_it_with_browser"
        app:showAsAction="never" />
</menu>
